[project]
name = "comfyui-resharpen"
description = "Manipulate the details of generations"
version = "1.2.0"
license = { text = "MIT License" }
dependencies = []

[project.urls]
Repository = "https://github.com/Haoming02/comfyui-resharpen"

[tool.comfy]
PublisherId = "haoming02"
DisplayName = "ReSharpen"
Icon = ""
